[HOTFIX] Fix wordbreak in report preview page

--- a/src/assets/templates/css/style.css
+++ b/src/assets/templates/css/style.css
@@ -498,6 +498,7 @@ p.left-arrow-paragraph::before{
     padding-bottom: 30px;
     color: #333333;
     font-weight: normal;
+    word-break: normal;
 }
 
 .doscolumn_section .graph_block .image_block,
